Implement bootstrap, router

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
     <head>
         <% include ../partials/header.ejs %>
     </head>
     <body>
         <header>
-            <h1>Javascript Development idea</h1>
+            <h1>Javascript Development ideav1</h1>
         </header>
-        <section id="dashboard"></section>
+        <section ng-view></section>
         <footer>
             <% include ../partials/footer.ejs %>
         </footer>
