--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 Thank you for download
-<script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.min.js"></script>
+<script src="js/vender.js"></script>
+<script src="js/landing.js"></script>
