--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,11 +4,21 @@
         <% include ../partials/header.ejs %>
     </head>
     <body>
-        <header>
-            <h1>Javascript Development ideav1</h1>
+        <header class="container-fluid">
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <a ui-sref="landing" class="brand">Javascript Development ideav1</a>
+                </div>
+            </div>
         </header>
-        <section ng-view></section>
-        <footer>
+        <section class="container">
+          <div class="row">
+            <div class="span12">
+              <div class="well" ui-view></div>        
+            </div>
+          </div>
+        </section>
+        <footer class="container-fluid">
             <% include ../partials/footer.ejs %>
         </footer>
     </body>
